

Data exploration
----------------

- Structs can now be rotated.  A horizontally displayed struct
  saves space by omitting the member names; this very much looks like
  a horizontal array.

- Array slices `ARRAY[FROM..TO]' are much better supported:
  * By default, the displayed values are clustered and displayed like an 
    ordinary array.
  * Array slices can be plotted, too.


Running the Program
-------------------

- Breakpoint commands are also supported for DBX, Perl, and XDB.

- In Perl, DDD supports temporary breakpoints.


Settings
--------

- DDD saves the GDB source directory path with the current session.

- DDD saves the JDB class path only with the current session.

DDD 3.2 also incorporates all changes and bug fixes listed below.


DDD 3.1.7
=========

DDD 3.1.7 fixes a number of minor bugs.

- Auto-raise of menus works much better (and is enabled by default).
- Value tips of strings containing ` = ' are displayed correctly.
- In file names, `//' is no longer normalized to `/'.
- The array slice syntax `graph display [A..B]' now works for DBX.
- Using the execution window with Sun DBX 4.0 now should work.
- [JDB] Thread names with dashes are handled correctly.
- [HP-UX] Renaming the `~/.ddd/init' file during saving options works.
- [Build] DDD checks whether -fpermissive is required for old X headers.

There are no new features in DDD 3.1.7.  You don't need to upgrade
unless you suffer from one of these problems.


DDD 3.1.6
=========

DDD 3.1.6 brings support for recent tools and components.

- DDD passes all options after `--' to the inferior debugger.
- [Build] DDD supports EGCS 1.1.2 as well as GCC 2.95 and later
- [Build] DDD supports LessTif 0.88.9 and later.

There are no new features in DDD 3.1.6.  You don't need to upgrade
unless you suffer from one of these problems.


DDD 3.1.5
=========

DDD 3.1.5 brings support for recent tools and components.

- [Linux] DDD supports TTYs on Linux with GNU libc 2.1.