@@ -287,7 +287,7 @@ J	[A-Za-z_$][A-Za-z0-9_$.]*
 57\(\*{C}\*\){C}			RETURN(&rxm3comment);
 58{_}(sh{W}|!)?make({W}{C})?		RETURN(&rxmake_cmd);
 59members{w}of{w}.+:{w}?\n		RETURN(&rxmembers_of_nl);
-60\[-?{D}\.\.-?{D}\]			RETURN(&rxmore_than_one);
+60-?{D}\.\.-?{D}			RETURN(&rxmore_than_one);
 61[^ ]+:{D}\n				RETURN(&rxname_colon_int_nl);
 62{W}\n{W}				RETURN(&rxnl);
 63\n[1-9]		 		RETURN(&rxnl_int);
